# magnum

./: CMakeLists.txt
doc/: building.dox  cmake.dox  developers.dox  utilities.dox  vulkan-mapping.dox  vulkan-support.dox  vulkan-wrapping.dox  vulkan.dox
modules/: FindMagnum.cmake
src/Magnum/: CMakeLists.txt
src/Magnum/SceneGraph/: Camera.h  Camera.hpp
src/Magnum/Shaders/: AbstractVector.vert  DistanceFieldVector.cpp  DistanceFieldVector.frag  DistanceFieldVector.h  Flat.cpp  Flat.frag  Flat.h  Flat.vert  Phong.cpp  Phong.frag  Phong.h  Phong.vert  ovrmultiview.glsl  resources.conf
src/Magnum/Video/: AbstractImporter.cpp  AbstractImporter.h  CMakeLists.txt  Video.cpp  Video.h  configure.h.cmake  visibility.h
src/Magnum/Vk/: CMakeLists.txt  Device.cpp  Device.h  Result.cpp  Result.h  Version.h  vk-info.cpp
src/Magnum/Vk/Test/: CMakeLists.txt  DeviceTest.cpp  ResultTest.cpp  VersionTest.cpp
